[package]
name = "dbase_js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dbase = { git = "https://github.com/tmontaigu/dbase-rs", features = ["yore"] }
wasm-bindgen = "0.2.84"
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
yore = "1.1.0"
serde = { version = "1.0.219", features = ["derive"] }
